--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,3 +31,6 @@ jobs:
 
       - name: Build and push Docker image
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-440212/notely-ar-repo/mrdando/notely:latest
+
+      - name: Deploy to Cloud Run
+        run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-440212/notely-ar-repo/mrdando/notely:latest --region us-central1 --allow-unauthenticated --project notely-440212 --max-instances=4
